--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
         &copy; Copyright <strong><span>TEF</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        Designed by: <a href="https://bootstrapmade.com/" style="color: white;">Muhammad Irfan</a>
+        Designed by: <a href="#" style="color: white;">Muhammad Irfan</a>
       </div>
     </div>
   </footer><!-- End Footer -->
